# project_PyTEST

./: pyproject.toml
src/: easy_test.py
tests/: conftest.py  test_main.py
